# kappa-haskell

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_NOTES.md  KAPPA_SELF_HOSTING_PORT_NOTES.md  KNOWN_SPEC_ISSUES.md  LICENSE  NATIVE_BACKEND_REDESIGN_PLAN.md  PERFORMANCE.md  README.md  SPEC_AUDIT_MATRIX.md  SPEC_COMPLIANCE.md  SPEC_COVERAGE.md  TESTING.md  codex-spec-narrative_1.md  hardcode_removal.md  kappa-haskell.cabal
.github/workflows/: release.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: BUILD_AND_NATIVE_BINDINGS.md  CONCEPTS.md  INDEPENDENT_TOTALITY_HANG_REVIEW.md  KAPPA_NATIVE_BENCHMARK_DESIGN.md  NATIVE_BACKEND.md  NATIVE_BACKEND_OPTIMIZATION_GUIDE.md  NATIVE_BACKEND_PERFORMANCE_PLAN.md  NATIVE_BACKEND_PERFORMANCE_REVIEW_NOTES.md  NATIVE_BACKEND_RAW_C_PERFORMANCE_REVIEW.md  NATIVE_BACKEND_REPORT.md  NATIVE_ESCALATIONS.md  NATIVE_FFI_DESIGN.md  READABILITY_BACKLOG.md  Spec.md  WORKER_DISCOVERED_ISSUES.md
docs/audit/: lane-meta.md  lane-runtime.md  lane-syntax.md  lane-types.md
docs/digests/: digest-11-12-types-quantities.md  digest-13-14-records-traits.md  digest-15-30-32-core-runtime.md  digest-16-17-expressions-patterns.md  digest-18-20-effects-do-collections.md  digest-28-T-prelude-harness.md
docs/notes/: IMPLEMENTATION_NOTES.md  KAPPA_SELF_HOSTING_PORT_NOTES.md  PERFORMANCE.md
examples/: README.md  todo.kp
examples/native/: README.md  hello.kp
examples/native/http_sqlite/: kappa.build.kp  native_shim.c  run.sh  server.kappa.h  server.kp
examples/native/http_uv/: README.md  kappa.build.kp  native_uv_shim.c  native_uv_shim.h
input/kappa-http-stack/: DESIGN.md  README.md  build.kp
input/kappa-http-stack/bindings/: dotnet-sockets.summary  jvm-nio.summary
runtime/: Makefile  atomic.c  internal.h  kappa_ucd.h  kappart.c  kappart.h  kappart2.h  kappart_ffi.c  kappart_ffi_stub.c  reactor.c  rt.c  scope.c  stm.c
runtime/docs/: CPS-DESIGN.md  DEPLOYMENT.md  DESIGN.md  INTEGRATION.md  PRIMITIVES.md  README.md  REVIEW.md
runtime/tests/: atomic.c  cancel.c  completion.c  finalizer_mask.c  scope_drain.c  scopes.c  stm.c  stm_orelse.c
src/Kappa/: Builtins.hs  Check.hs  Config.hs  Core.hs  CoreOps.hs  Diagnostic.hs  Eval.hs  Explain.hs  Interp.hs  Lexer.hs  Parser.hs  Pipeline.hs  Prelude.hs  Pretty.hs  Regex.hs  Resolve.hs  Source.hs  Syntax.hs  SyntaxOps.hs  Termination.hs  TestHarness.hs  Token.hs  Unicode.hs  UnicodeData.hs  Usage.hs
src/Kappa/Backend/: C.hs  Capabilities.hs  Driver.hs  Ffi.hs  HeaderGen.hs  Intrinsics.hs  NativeCatalog.hs  NativeFfi.hs  NativeProbe.hs
src/Kappa/Parser/: Monad.hs
test/: Spec.hs
test/native/: bench.sh  run-native-tests.sh
test/native/bench/: arithloop.kp  listfold.kp  ratio_arithloop.kp  ratio_tailsum.kp  recproj.kp  tailsum.kp
test/native/cases/: adtcons.kp  arith.kp  atomic.kp  bignum.kp  borrowview.kp  bytes.kp  control.kp  ctortags.kp  data.kp  deferlazy.kp  defernest.kp  dokernel.kp  effects.kp  flatbinders.kp  flatclosure.kp  flatframe.kp  fork.kp  forkdefer.kp  hidden-symbol.kp  ioerror.kp  iorec.kp  letqelse.kp  letqmiss.kp  letqor.kp  loops.kp  lr1.kp  perf.kp  prefixbind.kp  projection.kp  recordproj.kp  records.kp  scalarkinds.kp  showprims.kp  stm.kp  strings.kp  tailrec.kp  traits.kp  tupleproj.kp  ubuilders.kp  unicode.kp  (+4 more)
tests/: external-blocked.md  external-results.md
tests/conformance/application/: ctor-arity.kp  lambda-hof.kp  named-block-labels.kp  non-callable.kp  type-former-misapplication.kp
tests/conformance/bridge/: bridge-standard-module-positive-import-boundary-classification-ctors.kp  standard-module-positive-import-bridge-contract-types.kp
tests/conformance/collections/: custom_sink.kp  literals-positive-map-literal.kp  map-literal.kp  set-map-literal-dedup.kp
tests/conformance/data/: ctor-defaults.kp
tests/conformance/data_types/: constructor-defaults-negative-default-dependency-order.kp  constructor-defaults-negative-default-expression-checked.kp  constructors-alternatives-negative-nullary-nonfirst-overapplied.kp  constructors-alternatives-positive-nullary-nonfirst-value.kp  data-declarations-positive-same-spelling-type-and-constructor.kp  data-result-must-be-type.kp  data-types-constructor-defaults-positive-named-defaults.kp  data-types-data-declarations-negative-duplicate-constructor-declaration.kp  data-types-data-declarations-negative-type-object-is-not-constructor.kp  data-types-data-declarations-positive-empty-data-type.kp  data-types-data-declarations-positive.kp  data-types-type-aliases-positive-alias-preserves-member-projection.kp  data-types-type-aliases-positive.kp  operator-data-name.kp  positivity-accept.kp  positivity-converged-nonpositive-param-reject.kp  positivity-mutual-accept.kp  positivity-mutual-reject.kp  positivity-nonpositive-param-accepted.kp  positivity-reject-negative.kp  positivity-reject-rose.kp  positivity-transparent-alias-accept.kp  positivity-transparent-alias-reject.kp
tests/conformance/declarations/: declarations-expect-negative-multiple.kp  declarations-expect-negative-unsatisfied.kp  declarations-expect-positive-expect-data-form.kp  declarations-let-in-positive-local-function-capture.kp  declarations-let-in-positive-local-function-depends-on-earlier-local.kp  declarations-let-in-positive-local-function-inside-lambda.kp  declarations-let-in-positive-local-type-alias-captures-outer-type-parameter.kp  declarations-let-in-positive-local-value-signature-indented-definition.kp  declarations-let-in-positive-pattern-bound-local-capture.kp  declarations-let-in-positive-pure-block-expression-value.kp  declarations-let-in-qtt-local-bindings-negative-shadow-linear-drop.kp  declarations-let-in-qtt-local-bindings-positive-hidden-root-local-borrow.kp  declarations-let-in-qtt-local-bindings-positive-linear-let-preserves-linearity.kp  (+17 more)
tests/pending-import/: README.md
tools/: gen-comp-stress.sh  gen-macro-stress.sh  gen-stress.sh  gen-ucd-c.py  gen-unicode-data.py  package-source-zip.sh  run-external-fixtures.sh  run-targets.sh  triage-external.sh
(+3256 files in other folders)
